Use HTTPS instead of HTTP to resolve dependencies
This fixes a security vulnerability in this project where the `pom.xml`
files were configuring Maven to resolve dependencies over HTTP instead of
HTTPS.

Signed-off-by: Jonathan Leitschuh <Jonathan.Leitschuh@gmail.com>

--- a/archetype/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/src/main/resources/archetype-resources/pom.xml
@@ -36,7 +36,7 @@
 		<repository>
 			<id>${eclipse_platform}</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/${eclipse_platform}</url>
+			<url>https://download.eclipse.org/releases/${eclipse_platform}</url>
 		</repository>
 		<repository>
 			<id>RedDeer</id>
@@ -48,7 +48,7 @@
 	<pluginRepositories>
 		<pluginRepository>
 			<id>sonatype-public</id>
-			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid</url>
+			<url>https://repository.sonatype.org/content/groups/sonatype-public-grid</url>
 		</pluginRepository>
 	</pluginRepositories>
 
