--- a/tests/org.eclipse.reddeer.gef.test/pom.xml
+++ b/tests/org.eclipse.reddeer.gef.test/pom.xml
@@ -26,7 +26,7 @@
 	<repositories>
 		<repository>
 			<id>gef-legacy-examples</id>
-			<url>http://download.eclipse.org/tools/gef/updates/legacy/releases/</url>
+			<url>https://download.eclipse.org/tools/gef/updates/legacy/releases/</url>
 			<layout>p2</layout>
 		</repository>
 	</repositories>
